@@ -24,7 +24,8 @@ to content_set_folder() and img() functions.
 Global Controller files from now on.
 - changed loader::file('folder/file') as loader::file('folder/file'.EXT) .
 - added current_dir() function to Url helper.
-- loading model from another path bug fixed. added 'models' string and DS.  
+- loading model from another path bug fixed. added 'models' string and DS.
+- added $config['subhelper_prefix'] = 'my_';  to config.php file.  
 
 //-----------------------------------------------------------------------------
 
